k3s/raissa-beauty/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: raissa-beauty
  namespace: alex-raissa-beauty
spec:
  selector:
    app: raissa-beauty
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
